packages/client/components/ui/styles.css
@import "@fontsource/inter/300";
@import "@fontsource/inter/400";
@import "@fontsource/inter/500";
@import "@fontsource/inter/600";
@import "@fontsource/inter/700";
@import "@fontsource/inter/800";
@import "@fontsource/jetbrains-mono";

* { box-sizing: border-box }

body {
  margin: 0;
  background: #191919;
  font-family: var(--fonts-primary);
  --phone-max-width: 600px;
}

#root {
  position: fixed;
  top: env(safe-area-inset-top);
  left: env(safe-area-inset-left);
  right: env(safe-area-inset-right);
  bottom: env(safe-area-inset-bottom);
}

/* App: Desktop view */
.appRoot {
  display: flex;
  flex-direction: column;
  height: 100%;
}
.appSidebar {
  display: flex;
  flex-shrink: 0;
}

/* Main: Phone view */
@media (max-width: 600px) {
  main {
    margin: 0;
    border-radius: 0;
  }
  .dialogScrim { padding: 30px }
  .appSbBase { flex-grow: 1 }
  .appSidebar {
    --layout-width-channel-sidebar: auto;
    position: absolute;
    width: 100vw;
    height: 100%;
  }
}

/* Settings: Desktop view */
.setMain {
  display: flex;
  height: 100%;
  pointer-events: all;
  color: var(--md-sys-color-on-surface);
  background: var(--md-sys-color-surface-container-highest);
}

/* Settings: Tablet view */
.setMobileBack { display: none }
@media (max-width: 900px) {
  .setCont { padding: 12px }
  .setSidebar { padding: 8px 0 }
  .setClose { display: none }
  .setMobileBack { display: flex }
}

/* Settings: Phone view */
@media (max-width: 600px) {
  .setSbBase {
    position: absolute;
    width: 100vw;
    height: 100%;
    padding-left: 12px;
  }
  .setSbBase > * { width: 100% }
  .setSidebar { max-width: unset }
  .setBase { border-radius: 0 }
  .setCont { height: 100vh }
}

/* HighlightJs */
/*!
  Theme: GitHub Dark
  Description: Dark theme as seen on github.com
  Author: github.com
  Maintainer: @Hirse
  Updated: 2021-05-15

  Outdated base version: https://github.com/primer/github-syntax-dark
  Current colors taken from GitHub's CSS
*/

.hljs {
  color: #c9d1d9;
  background: #0d1117;
}

.hljs-doctag,
.hljs-keyword,
.hljs-meta .hljs-keyword,
.hljs-template-tag,
.hljs-template-variable,
.hljs-type,
.hljs-variable.language_ {
  color: #ff7b72;
}

.hljs-title,
.hljs-title.class_,
.hljs-title.class_.inherited__,
.hljs-title.function_ {
  color: #d2a8ff;
}

.hljs-attr,
.hljs-attribute,
.hljs-literal,
.hljs-meta,
.hljs-number,
.hljs-operator,
.hljs-variable,
.hljs-selector-attr,
.hljs-selector-class,
.hljs-selector-id {
  color: #79c0ff;
}

.hljs-regexp,
.hljs-string,
.hljs-meta .hljs-string {
  color: #a5d6ff;
}

.hljs-built_in,
.hljs-symbol {
  color: #ffa657;
}

.hljs-comment,
.hljs-code,
.hljs-formula {
  color: #8b949e;
}

.hljs-name,
.hljs-quote,
.hljs-selector-tag,
.hljs-selector-pseudo {
  color: #7ee787;
}

.hljs-subst {
  color: #c9d1d9;
}

.hljs-section {
  color: #1f6feb;
  font-weight: bold;
}

.hljs-bullet {
  color: #f2cc60;
}

.hljs-emphasis {
  color: #c9d1d9;
  font-style: italic;
}

.hljs-strong {
  color: #c9d1d9;
  font-weight: bold;
}

.hljs-addition {
  color: #aff5b4;
  background-color: #033a16;
}

.hljs-deletion {
  color: #ffdcd7;
  background-color: #67060c;
}

.hljs-char.escape_,
.hljs-link,
.hljs-params,
.hljs-property,
.hljs-punctuation,
.hljs-tag {
  /* purposely ignored */
}

